Fixed unused paramater in ImageUpload - NameplatePreview uses custom font

--- a/frontend/src/assets/styles/fonts.css
+++ b/frontend/src/assets/styles/fonts.css
@@ -5,3 +5,11 @@
   font-style: normal;
   font-display: swap;
 } 
+
+@font-face {
+  font-family: 'gg sans';
+  src: url('../fonts/gg sans Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+} 
